--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,1 +1,12 @@
 @import "../../styles/variables.scss";
+
+.Header {
+  height: 520px;
+  width: 100vw;
+  top: 232px;
+  background-color: black;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
