--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,24 @@
+@import "./variables.scss";
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+h1 {
+  @include title();
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.whiteSubtitle {
+  @include whiteSubtitle();
+}
+
+.blackSubtitle {
+  @include blackSubtitle();
+}
+
+.whiteBody {
+  @include whiteBody();
+}
+
+.blackBody {
+  @include blackBody();
 }
