--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,11 @@
 @import "./variables.scss";
 
+.App {
+  text-align: center;
+  font-family: $font-family;
+  height: fit-content;
+}
+
 body {
   margin: 0;
 }
