--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,11 +4,14 @@
   text-align: center;
   font-family: $font-family;
   height: fit-content;
+  background-color: black;
+  overflow-x: hidden;
 }
 
 body {
   margin: 0;
 }
+
 h1 {
   @include title();
 }
@@ -27,4 +30,35 @@ h1 {
 
 .blackBody {
   @include blackBody();
+}
+
+// Buttons ///////////////////////////////////////////////////////////////////////////////////////////////////////
+
+.blackButton {
+  border: white solid 1px;
+  background-color: black;
+  padding: 20px 0;
+  width: 65vw;
+  margin: 35px;
+  color: white;
+  text-transform: uppercase;
+  &:hover {
+    transform: scale(1.1);
+    box-shadow: 10px 17px 40px -16px rgba(247, 225, 247, 0.97);
+  }
+}
+
+.transparentButton {
+  padding: 20px 65px;
+  margin: 5vh 0 15vh 0;
+  background-color: transparent;
+  text-transform: uppercase;
+  color: white;
+  border: white solid 1px;
+  &:hover {
+    background: white;
+  }
+  &:disabled {
+    opacity: 25%;
+  }
 }
