--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,1 +1,12 @@
 @import "../styles/variables.scss";
+
+.map-container {
+  height: 200px;
+  width: 300px;
+}
+
+.mapBox {
+  display: flex;
+  justify-content: center;
+  margin: 5vh 0 5vh 0;
+}
