--- a/src/styles/Bookings.scss
+++ b/src/styles/Bookings.scss
@@ -13,3 +13,9 @@
     background-color: white;
   }
 }
+
+@media only screen and (min-width: 600px) {
+}
+
+@media only screen and (min-width: 768px) {
+}
