--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -63,3 +63,12 @@ body {
     opacity: 25%;
   }
 }
+
+@media only screen and (min-width: 600px) {
+  .whiteBody {
+    font-size: larger;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+}
