--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -73,8 +73,35 @@
   }
 }
 
-@media only screen and (min-width: 600px) {
+// Phones
+@media only screen and (max-width: 480px) {
+  .tabletImg,
+  .desktopImg {
+    display: none;
+  }
 }
 
-@media only screen and (min-width: 768px) {
+// Tablets
+@media only screen and (min-width: 480px) and (max-width: 961px) {
+  .whiteBody {
+    font-size: 24px;
+  }
+
+  .phoneImg,
+  .desktopImg {
+    display: none;
+  }
+
+  .menuHighligths {
+    display: flex;
+    align-items: center;
+  }
+}
+
+// Desktop
+@media only screen and (min-width: 961px) {
+  .phoneImg,
+  .tabImg {
+    display: none;
+  }
 }
