--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -31,12 +31,6 @@
 
   .whiteBody {
     @include whiteBody();
-    line-height: 26px;
-  }
-
-  .menuItemTitle {
-    margin-top: -5vh;
-    font-size: 26px;
   }
 
   .menuItemDescr {
@@ -45,18 +39,13 @@
 
   .Collapsible__trigger {
     @include blackSubtitle();
-    font: {
-      size: 26px;
-      weight: 200;
-    }
+    font-weight: 200;
     text-transform: uppercase;
     color: black;
     margin: 2vh 0;
     opacity: 0.7;
     &:hover {
       opacity: 1;
-      text-decoration: underline;
-      text-underline-offset: 12px;
     }
   }
 
@@ -86,10 +75,18 @@
     width: 20vw;
     margin: 0 auto 5vh auto;
   }
+
   .linesPattern {
-    width: 200px;
+    width: 180px;
     position: absolute;
-    margin-bottom: -100px;
+    z-index: 1;
+  }
+
+  .shapePattern {
+    width: 50vw;
+    height: 25vh;
+    position: absolute;
+    z-index: 1;
   }
 }
 
@@ -97,15 +94,42 @@
 @media only screen and (max-width: 480px) {
   .tabletImg,
   .desktopImg,
-  .longLineDeco .smallLineDeco {
+  .longLineDeco,
+  .smallLineDeco,
+  .linesPattern,
+  .shapePattern {
     display: none;
+  }
+
+  .whiteSubtitle {
+    font-size: 32px;
+  }
+
+  .blackSubtitle {
+    font-size: 32px;
+  }
+
+  .whiteBody {
+    line-height: 26px;
+  }
+
+  .menuItemTitle {
+    font-size: 26px;
+  }
+
+  .Collapsible__trigger {
+    font-size: 26px;
   }
 }
 
 // Tablets
 @media only screen and (min-width: 480px) and (max-width: 961px) {
-  .whiteBody {
-    font-size: 24px;
+  .title {
+    font-size: 76px;
+  }
+  .whiteBody,
+  .blackBody {
+    font-size: 28px;
     line-height: 40px;
   }
 
@@ -120,18 +144,29 @@
     align-items: center;
   }
 
-  .menuItemTitle {
-    margin-top: 0;
-    font-size: 26px;
-  }
-
   .menuItemDescr {
     margin-top: 0;
   }
 
   .tabLayout {
     text-align: left;
-    margin-top: 45px;
+    margin-top: 10px;
+  }
+
+  .whiteSubtitle {
+    font-size: 46px;
+  }
+
+  .blackSubtitle {
+    font-size: 46px;
+  }
+
+  .menuItemTitle {
+    font-size: 40px;
+  }
+
+  .Collapsible__trigger {
+    font-size: 46px;
   }
 }
 
