--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -49,7 +49,6 @@ body {
 }
 
 .transparentButton {
-  padding: 20px 65px;
   margin: 5vh 0 10vh 0;
   background-color: transparent;
   text-transform: uppercase;
@@ -69,9 +68,11 @@ body {
 @media only screen and (max-width: 480px) {
   .transparentButton {
     font-size: 16px;
+    padding: 20px 65px;
   }
   .blackButton {
     font-size: 16px;
+    padding: 20px 65px;
   }
 }
 
@@ -79,9 +80,11 @@ body {
 @media only screen and (min-width: 480px) and (max-width: 961px) {
   .transparentButton {
     font-size: 36px;
+    padding: 20px 65px;
   }
   .blackButton {
     font-size: 36px;
+    padding: 20px 65px;
   }
 }
 
@@ -90,5 +93,13 @@ body {
   .phoneImg,
   .tabImg {
     display: none;
+  }
+
+  .transparentButton {
+    font-size: 18px;
+    padding: 14px 35px;
+  }
+  .blackButton {
+    font-size: 18px;
   }
 }
