--- a/src/components/ReservationForm.scss
+++ b/src/components/ReservationForm.scss
@@ -1,44 +1,62 @@
 @import "../styles/variables.scss";
 
-.reservation-form {
+.form {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: white;
-
-  &__input-group {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
-  }
-
-  &__label {
+  padding: 5%;
+  label {
     margin-bottom: 5px;
+    margin-right: 5px;
     font-weight: bold;
     color: #333;
   }
-
-  &__input {
+  input,
+  select,
+  .symbol {
     padding: 10px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    font-size: 16px;
-  }
-
-  &__submit-btn {
-    padding: 10px 20px;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: #fff;
+    margin-bottom: 5px;
     border: none;
+    border-bottom: 1px solid #ccc;
     font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-
-    &:hover {
-      background-color: #0062cc;
-    }
+    background-color: transparent;
   }
+  span,
+  .symbol {
+    border: none;
+    background-color: transparent;
+  }
+  .inputs {
+    width: 88%;
+  }
+
+  label {
+    padding: 0;
+  }
+  input:focus,
+  select:focus {
+    outline: none;
+  }
+  select {
+    color: #9e7f66;
+  }
+}
+.submitButton {
+  background-color: black;
+  text-transform: uppercase;
+  color: white;
+  font-weight: 600;
+  text-decoration: none;
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+
+.peopleSelect {
+  border-bottom: 1px solid #ccc;
+  width: 50%;
+  margin: auto;
 }
 
 .error-message,
@@ -50,11 +68,42 @@
 }
 
 .error-message {
-  background-color: #f8d7da;
+  background-color: transparent;
   color: #721c24;
 }
 
 .success-message {
-  background-color: #d4edda;
+  background-color: transparent;
   color: #155724;
+}
+
+// Phones
+@media only screen and (max-width: 480px) {
+  .submitButton {
+    font-size: 16px;
+    padding: 18px 40px 16px;
+  }
+}
+
+// Tablets
+@media only screen and (min-width: 480px) and (max-width: 961px) {
+  .submitButton {
+    font-size: 34px;
+    font-weight: 400;
+    padding: 18px 40px 16px;
+  }
+}
+
+// Desktop
+@media only screen and (min-width: 961px) {
+  .form {
+    width: 30vw;
+  }
+  .submitButton {
+    font-size: 18px;
+    padding: 14px 35px;
+  }
+
+  span {
+  }
 }
