--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,11 @@
 @import "./variables.scss";
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
   font-family: $font-family;
@@ -10,8 +16,8 @@
 
 html,
 body {
+  overflow-x: hidden !important;
   margin: 0;
-  overflow-x: hidden;
 }
 
 .title {
