--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -19,10 +19,6 @@
   padding: 5% 0;
 }
 
-// Phones
-@media only screen and (max-width: 480px) {
-}
-
 // Tablets
 @media only screen and (min-width: 480px) and (max-width: 961px) {
   .map-container {
@@ -72,5 +68,17 @@
 
   .socialLogo > * {
     margin-right: 20px;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  .mapBox {
+    width: 30%;
+    margin: 50px 3vw;
+  }
+  .Footer {
+    .footerTitle {
+      margin: 0;
+    }
   }
 }
