--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -250,6 +250,7 @@
     display: flex;
     flex-direction: row-reverse;
     width: 100vw;
+    margin: 0;
   }
 
   .firstSubtitle {
@@ -259,7 +260,7 @@
   .intro {
     position: absolute;
     width: 40vw;
-    margin: 6vh 16vw;
+    margin: 2% 0 50% 17%;
     text-align: left;
   }
 
@@ -412,25 +413,6 @@
     }
     .transparentButton {
       margin: 0;
-    }
-  }
-}
-
-@media only screen and (min-width: 1000px) {
-  .Header {
-    margin-left: 20vw;
-    .firstSubtitle {
-      font-size: 48px;
-    }
-  }
-}
-
-@media only screen and (min-width: 1200px) {
-  .Header {
-    margin-left: 20vw;
-    height: 100vh;
-    .firstSubtitle {
-      font-size: 58px;
     }
   }
 }
